--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,31 @@
+*{
+  box-sizing: border-box;
+}
 html,body
 {
+  box-sizing: border-box;
   margin:0;
   padding:0;
-  height:100vh;
-  width:100vw;
   background-color: #F5F7FB;
   background: url('./assets/border-right.png') top right no-repeat,
   url('./assets/border-left.png') bottom left no-repeat;
-  font-family: Karla;
+  
+font-family: Karla;
 }
+
 #root{
-  width:100%;
-  height:100%;
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width:100%;
+  padding:20px 0px;
 }
 .main-container
 {
-  width:100%;
-  height:100%;
+  width:100vw;
+  height:100vh;
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -64,23 +69,29 @@ h3
   justify-content: center;
   row-gap: 10px;;
   margin-top:10px;
-  margin-bottom: 10px;;
+  margin-bottom: 10px;
+  width: 100%;
+  text-align: center;
 }
 .question{font-size:16px;
+  margin:0px;
+  max-width: 90%;;
   margin-bottom:13px;
 }
 .options {
   display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  column-gap: 20px;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 20px;
+  width: 100%;
 }
 [class*="option-"]
 {
   border:1px solid #293264;
   border-radius:8px;
   background-color:transparent;
+  text-align: center;
+  max-width: 80%;
   color:#293264;
   font-family: Karla;
   font-weight: bold;
@@ -96,7 +107,7 @@ opacity:0.5;}
   background-color: #e3e4ed;
 }
 hr{color:#D9D9D9;
-width:500px;
+width:90%;
 margin-top: 15px;
 opacity:0.5;
 border-width:0.2px;}
@@ -106,7 +117,6 @@ input
 }
 .submit-btn
 {
-  margin-top:20px;
   width:120px;
   height:35px;
   background-color: #4D5B9E;
@@ -115,6 +125,20 @@ input
   border-radius: 10px;
   color:white;
   cursor:pointer;
+}
+.quiz-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.score-container{
+  margin-top:20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap:20px;
+  width: 100%;
 }
 .score{display:inline;
 margin-right:10px;}
